--- a/upload/templates/upload.html
+++ b/upload/templates/upload.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <p>Hello</p>
-</body>
-</html>
+{% endblock %}
