Added parsing of textarea fields

--- a/upload/templates/upload_test.html
+++ b/upload/templates/upload_test.html
@@ -2,4 +2,7 @@
 {% block content %}
     <p>Upload Form - Cleaned Data Dictionary</p>
     <p>{{ form_data_dict }}</p>
+    <p>{{ chart_title }}</p>
+    <p>{{ x_data }}</p>
+    <p>{{ y_data }}</p>
 {% endblock %}
