Added accounts app

--- a/barchart/templates/barchart.html
+++ b/barchart/templates/barchart.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Bar Chart{% endblock page_title %}
+
 {% block head_js %}
 <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
 {% endblock head_js %}
