--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Password Reset{% endblock page_title %}
+
 {% block content %}
 
 <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
