--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 
+{% block page_title %}Register{% endblock page_title %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
-<p>If you already have an account, you can <a href="">sign in</a></p>
+<p>If you already have an account, you can <a href="{% url 'login' %}">sign in</a></p>
 <form method="post" action="{% url 'register' %}">
     {% csrf_token %}
+
     {{ registration_form | crispy }}
+    
     <button type="submit" class="btn btn-primary">Register</button>
 </form>
 {% endblock %}
