--- a/barchart/templates/upload.html
+++ b/barchart/templates/upload.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Upload Data{% endblock page_title %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
