--- a/home/templates/createchart.html
+++ b/home/templates/createchart.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Create Chart{% endblock page_title %}
+
 {% block content %}
 <div class="card" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="...">
