--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Dashing Data{% endblock page_title %}
+
 {% block content %}
     <p>Index</p>
 {% endblock %}
