--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Password Reset Complete{% endblock page_title %}
+
 {% block content %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
 <p><a href="{{ login_url }}">Log in</a></p>
