--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Reset Password{% endblock page_title %}
+
 {% block content %}
     {% if validlink %}
         <p>Please enter your new password twice.<br />
