--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Password Reset{% endblock page_title %}
+
 {% block content %}
 <p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
 <p>You should be receiving it shortly.</p>
