--- a/barchart/templates/barchart.html
+++ b/barchart/templates/barchart.html
@@ -14,6 +14,8 @@
 
     <div id="draw-here"></div>
 
+    <a class="btn btn-primary" href="{% url 'save_chart' %}" role="button">Save Chart</a>
+
     {{ bar_data|json_script:"bar_data" }}
     <script>
         // set the dimensions and margins of the graph
