Added register button to login with redirect to next

--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <p>If you already have an account, you can <a href="{% url 'login' %}">sign in</a></p>
-<form method="post" action="{% url 'register' %}">
+<form method="post" action="{% url 'register' %}?next={{ next }}">
     {% csrf_token %}
 
     {{ registration_form | crispy }}
