--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -18,4 +18,7 @@
             <button type="submit" class="btn btn-primary">Login</button>
         </fieldset>
     </form>
+
+    <p>New to Dashing Data?</p>
+    <a class="btn btn-primary" href="{% url 'register' %}?next={{ next }}" role="button">Register</a>
 {% endblock %}
