Added app linechart

--- a/home/templates/createchart.html
+++ b/home/templates/createchart.html
@@ -9,7 +9,17 @@
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-        <a href="{% url 'upload_bar_chart' %}" class="btn btn-primary">Bar Chart</a>
+        <a href="{% url 'barchart:upload_bar_chart' %}" class="btn btn-primary">Bar Chart</a>
+    </div>
+</div>
+
+<div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="{% url 'linechart:upload_line_chart' %}" class="btn btn-primary">Line Chart</a>
     </div>
 </div>
 {% endblock %}
