Standardised view and template naming across barchart and linechart apps

--- a/home/templates/home/createchart.html
+++ b/home/templates/home/createchart.html
@@ -9,7 +9,7 @@
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-        <a href="{% url 'barchart:upload_bar_chart' %}" class="btn btn-primary">Bar Chart</a>
+        <a href="{% url 'barchart:upload_chart' %}" class="btn btn-primary">Bar Chart</a>
     </div>
 </div>
 
@@ -19,7 +19,7 @@
         <h5 class="card-title">Card title</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-        <a href="{% url 'linechart:upload_line_chart' %}" class="btn btn-primary">Line Chart</a>
+        <a href="{% url 'linechart:upload_chart' %}" class="btn btn-primary">Line Chart</a>
     </div>
 </div>
 {% endblock %}
