Added buttons to saved charts page

--- a/search/templates/search/savedcharts.html
+++ b/search/templates/search/savedcharts.html
@@ -29,7 +29,11 @@
                 <td>{{ chart.title }}</td>
                 <td>{{ chart.date_created }}</td>
                 <td></td>
-                <td></td>
+                <td>
+                    <button type="button" class="btn btn-primary btn-sm">View</button>
+                    <button type="button" class="btn btn-primary btn-sm">Edit</button>
+                    <button type="button" class="btn btn-primary btn-sm">Delete</button>
+                </td>
             </tr>
             {% empty %}
             <tr>
