--- a/search/templates/search/savedcharts.html
+++ b/search/templates/search/savedcharts.html
@@ -32,7 +32,7 @@
                 <td>
                     <button type="button" class="btn btn-primary btn-sm">View</button>
                     <button type="button" class="btn btn-primary btn-sm">Edit</button>
-                    <button type="button" class="btn btn-primary btn-sm">Delete</button>
+                    <a href="{% url 'delete_chart' chart.id %}" class="btn btn-primary btn-sm">Delete</a>
                 </td>
             </tr>
             {% empty %}
