--- a/search/templates/search/confirmdelete.html
+++ b/search/templates/search/confirmdelete.html
@@ -5,10 +5,10 @@
 {% block content %}
 
     <p>Confirm Delete</p>
-    <form action="{% url 'delete_chart' chart.id %}" method="post">
+    <form action="{% url 'search:delete_chart' chart.id %}" method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-warning">Confirm</button>
-        <a href="{% url 'all_charts' %}" class="btn btn-primary">Cancel</a>
+        <a href="{% url 'search:all_charts' %}" class="btn btn-primary">Cancel</a>
     </form>
     
 {% endblock %}
