--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'search:all_charts' %}">Your Charts</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:password_reset' %}">Reset Password</a>
+                </li>
                 {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
