--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">sign in</a></p>
-<form method="post" action="{% url 'accounts:register' %}?next={{ next }}">
+<form method="post" action="{% url 'accounts:register' %}">
     {% csrf_token %}
 
     {{ registration_form | crispy }}
