Enforce 1 subscription per person

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -13,4 +13,5 @@
     <p>{{ user_subscription.subscription_type_id.length_months }}</p>
     <p>{{ user_subscription.start_date }}</p>
     <p>{{ user_subscription.end_date }}</p>
+    <!-- button to renew subscription -->
 {% endblock %}
