--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -13,5 +13,14 @@
     <p>{{ user_subscription.subscription_type_id.length_months }}</p>
     <p>{{ user_subscription.start_date }}</p>
     <p>{{ user_subscription.end_date }}</p>
+    {% if subscription_status == 'Active' %}
+    <p>Subscription is active</p>
+    {% elif subscription_status == 'Expired' %}
+    <p>Subscription is expired</p>
+    <a href="{% url 'subscription:choose_subscription' %}" class="btn btn-primary btn-sm">Renew Subscription</a>
+    {% else %}
+    <p>No Subscription</p>
+    <a href="{% url 'subscription:choose_subscription' %}" class="btn btn-primary btn-sm">Choose Subscription</a>
+    {% endif %}
     <!-- button to renew subscription -->
 {% endblock %}
