--- a/subscription/templates/subscription/payment.html
+++ b/subscription/templates/subscription/payment.html
@@ -25,7 +25,7 @@
     <div id="card-errors" role="alert"></div>
   </div>
 
-  <button type="submit" class="btn btn-warning">Pay {{ subscription_type.price }}</button>
+  <button type="submit" class="btn btn-warning">Pay €{{ subscription_type.price }}</button>
 </form>
 <script>
   $(function () {
