--- a/subscription/templates/subscription/subscriptions.html
+++ b/subscription/templates/subscription/subscriptions.html
@@ -8,7 +8,7 @@
 
 {% for subscription_type in subscription_types %}
 <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="" class="card-img-top" alt="">
     <div class="card-body">
         <h5 class="card-title">{{ subscription_type.name }}</h5>
         <p class="card-text">
