--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}">Log In</a>
+                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
                 </li>
                 {% endif %}
                 <li class="nav-item dropdown">
