--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %}
 
-{% block page_title %}Log In{% endblock page_title %}
+{% block page_title %}Login{% endblock page_title %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="post" action="{% url 'accounts:login' %}?next={{ next }}" class="accountform">
-        <fieldset class="form-group">
-            <legend>Login</legend>
-            
-            {% csrf_token %}
+<form method="post" action="{% url 'accounts:login' %}?next={{ next }}">
+    {% csrf_token %}
+    
+    <fieldset class="form-group">
+        <legend>Login</legend>
+        {{ login_form | crispy }}
+        <a href="{% url 'accounts:password_reset' %}">Forgot my password</a>
+    </fieldset>
 
-            {{ login_form | crispy }}
-            
-             <p><a href="{% url 'accounts:password_reset' %}">Forgot my password</a></p>
-             
-            <button type="submit" class="btn btn-primary">Login</button>
-        </fieldset>
-    </form>
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Login</button>
+    </div>
+</form>
 
-    <p>New to Dashing Data?</p>
-    <a class="btn btn-primary" href="{% url 'accounts:register' %}?next={{ next }}" role="button">Register</a>
+<p>New to Dashing Data?</p>
+
+<a class="btn btn-primary" href="{% url 'accounts:register' %}?next={{ next }}" role="button">Register</a>
 {% endblock %}
