--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -5,12 +5,17 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<p>If you already have an account, you can <a href="{% url 'accounts:login' %}">sign in</a></p>
 <form method="post" action="{% url 'accounts:register' %}">
     {% csrf_token %}
 
-    {{ registration_form | crispy }}
-    
-    <button type="submit" class="btn btn-primary">Register</button>
+    <fieldset class="form-group">
+        <legend>Register</legend>
+        <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">login</a></p>
+        {{ registration_form | crispy }}
+    </fieldset>
+ 
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Register</button>
+    </div>
 </form>
 {% endblock %}
