--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,21 +5,33 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<h1>Login</h1>
 <form method="post" action="{% url 'accounts:login' %}?next={{ next }}">
     {% csrf_token %}
     
-    <fieldset class="form-group">
-        <legend>Login</legend>
-        {{ login_form | crispy }}
-        <a href="{% url 'accounts:password_reset' %}">Forgot my password</a>
-    </fieldset>
+    <div class="row">
+        <div class="col">
+            {{ login_form | crispy }}
+            <p><a href="{% url 'accounts:password_reset' %}">Forgot my password</a></p>
+        </div>
+    </div>
 
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Login</button>
+    <div class="form-group row">
+        <div class="col">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
     </div>
 </form>
 
-<p>New to Dashing Data?</p>
+<div class="form-group row">
+    <div class="col">
+        New to Dashing Data?
+    </div>
+</div>
 
-<a class="btn btn-primary" href="{% url 'accounts:register' %}?next={{ next }}" role="button">Register</a>
+<div class="row">
+    <div class="col">
+        <a class="btn btn-primary" href="{% url 'accounts:register' %}?next={{ next }}" role="button">Register</a>
+    </div>
+</div>
 {% endblock %}
