--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -5,17 +5,21 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<h1>Register</h1>
 <form method="post" action="{% url 'accounts:register' %}">
     {% csrf_token %}
 
-    <fieldset class="form-group">
-        <legend>Register</legend>
-        <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">login</a></p>
-        {{ registration_form | crispy }}
-    </fieldset>
+    <div class="row">
+        <div class="col">
+            <p>If you already have an account, you can <a href="{% url 'accounts:login' %}">login</a></p>
+            {{ registration_form | crispy }}
+        </div>
+    </div>
  
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">Register</button>
+    <div class="form-group row">
+        <div class="col">
+            <button type="submit" class="btn btn-primary">Register</button>
+        </div>
     </div>
 </form>
 {% endblock %}
