--- a/subscription/templates/subscription/subscriptions.html
+++ b/subscription/templates/subscription/subscriptions.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>Subscriptions</p>
+<h1>Subscriptions</h1>
 
 {% for subscription_type in subscription_types %}
 <div class="card" style="width: 18rem;">
