--- a/subscription/templates/subscription/payment.html
+++ b/subscription/templates/subscription/payment.html
@@ -10,23 +10,19 @@
 
 {% block content %}
 <form action="{% url 'subscription:pay_subscription' subscription_type.id %}" method="post" id="payment-form">
-  {% csrf_token %}
-  <div class="form-group">
-    <label for="card-element">
-      Credit or debit card
-    </label>
-    <div class="form-control" id="card-element">
-      <!-- A Stripe Element will be inserted here. -->
+    {% csrf_token %}
+    <div class="form-group">
+        <label for="card-element">
+            Credit or debit card
+        </label>
+        <div class="form-control" id="card-element"></div>
+        <div id="card-errors" role="alert"></div>
     </div>
-
-    <!-- Used to display Element errors. -->
-    <div id="card-errors" role="alert"></div>
-  </div>
-
-  <button type="submit" class="btn btn-warning">Pay €{{ subscription_type.price }}</button>
+    <button type="submit" class="btn btn-warning">Pay €{{ subscription_type.price }}</button>
 </form>
+
 <script>
-  $(function () {
+$(function () {
     // create a Stripe client
     var stripe = Stripe('{{ publishable }}');
 
@@ -61,34 +57,35 @@
 
     // Create a token or display an error when the form is submitted.
     var form = document.getElementById('payment-form');
+    
     form.addEventListener('submit', function (event) {
-      event.preventDefault();
+        event.preventDefault();
 
-      stripe.createToken(card).then(function (result) {
-        if (result.error) {
-          // Inform the customer that there was an error.
-          var errorElement = document.getElementById('card-errors');
-          errorElement.textContent = result.error.message;
-        } else {
-          // Send the token to your server.
-          stripeTokenHandler(result.token);
-        }
-      });
+        stripe.createToken(card).then(function (result) {
+            if (result.error) {
+                // Inform the customer that there was an error.
+                var errorElement = document.getElementById('card-errors');
+                errorElement.textContent = result.error.message;
+            } else {
+                // Send the token to your server.
+                stripeTokenHandler(result.token);
+            }
+        });
     });
 
     function stripeTokenHandler(token) {
-      // Insert the token ID into the form so it gets submitted to the server
-      var form = document.getElementById('payment-form');
-      var hiddenInput = document.createElement('input');
-      hiddenInput.setAttribute('type', 'hidden');
-      hiddenInput.setAttribute('name', 'stripeToken');
-      hiddenInput.setAttribute('value', token.id);
-      form.appendChild(hiddenInput);
+        // Insert the token ID into the form so it gets submitted to the server
+        var form = document.getElementById('payment-form');
+        var hiddenInput = document.createElement('input');
+        hiddenInput.setAttribute('type', 'hidden');
+        hiddenInput.setAttribute('name', 'stripeToken');
+        hiddenInput.setAttribute('value', token.id);
+        form.appendChild(hiddenInput);
 
-      // Submit the form
-      form.submit();
+        // Submit the form
+        form.submit();
     }
 
-  })
+})
 </script>
 {% endblock %}
