Formatting password reset templates

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-You're receiving this e-mail because you requested a password reset for your {{ user.uername }} Dashing Data account.
+You're receiving this e-mail because you requested a password reset for your Dashing Data account.
 
 Please go to the following page and choose a new password:
 {% block reset_link %}
