--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
-{% block page_title %}Password Reset Complete{% endblock page_title %}
+{% block page_title %}Password Changed{% endblock page_title %}
 
 {% block content %}
-<p>Your password has been set.  You may go ahead and log in now.</p>
-<p><a href="{{ login_url }}">Log in</a></p>
+<h1>Password Changed</h1>
+<p>Your password has been set. You may go ahead and log in now.</p>
+<a href="{{ login_url }}" class="btn btn-primary">Log in</a>
 {% endblock %}
