--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,20 +1,31 @@
 {% extends "base.html" %}
 
-{% block page_title %}Reset Password{% endblock page_title %}
+{% block page_title %}Change Password{% endblock page_title %}
+
+{% load crispy_forms_tags %}
 
 {% block content %}
-    {% if validlink %}
-        <p>Please enter your new password twice.<br />
-           So we can verify you typed it in correctly.</p>
-           <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" value="Change my password">
-        </form>
-    {% else %}
-        <h1>Password reset unsuccessful</h1>
-        <p>The password reset link was invalid, <br />
-        possibly because it has already been used. <br />
-        Please request a new password reset.</p>
-    {% endif %}
+{% if validlink %}
+<h1>Change Password</h1>
+<form method="post">
+    {% csrf_token %}
+
+    <div class="row">
+        <div class="col">
+            <p>Please enter your new password twice.</p>
+            {{ form | crispy }}
+        </div>
+    </div>
+    
+    <div class="form-group row">
+        <div class="col">
+            <button type="submit" class="btn btn-primary">Change my password</button>
+        </div>
+    </div>
+</form>
+{% else %}
+<h1>Password Reset Unsuccessful</h1>
+<p>The password reset link was invalid, possibly because it has already been used.</p>
+<p>Please request a new password reset.</p>
+{% endif %}
 {% endblock %}
