--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,6 +3,7 @@
 {% block page_title %}Email Sent{% endblock page_title %}
 
 {% block content %}
+<h1>Email Sent</h1>
 <p>Check your Inbox</p>
 <p>We've e-mailed you instructions for setting your password to the e-mail address you submitted.</p>
 <p>You should be receiving it shortly.</p>
