--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,30 +2,24 @@
 
 {% block page_title %}Password Reset{% endblock page_title %}
 
-{% block content %}
+{% load crispy_forms_tags %}
 
-<p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-<!--
+{% block content %}
+<h1>Request Password Reset Email</h1>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
-</form>
--->
-<form method="post">
-    {% csrf_token %}
-    <p>
-        <!--<label for="id_email">E-mail address:</label>-->
-        <!-- the below will generate 
-        <label for="id_email">Email:</label>
-        -->
-        {{ form.email.label_tag }}
-        <!-- the below will generate
-        <input type="email" name="email" maxlength="254" required id="id_email">
-        -->
-        {{ form.email.errors }}
-        {{ form.email }}
-    </p>
-    <input type="submit" value="Send me instructions!"/>
+    
+    <div class="row">
+        <div class="col">
+            <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+            {{ form | crispy }}
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col">
+            <button type="submit" class="btn btn-primary">Send me instructions!</button>
+        </div>
+    </div>
 </form>
 {% endblock %}
