--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     
     <script src="{% static 'js/jquery-3.4.1.slim.min.js' %}"></script>
@@ -17,62 +18,50 @@
 </head>
 <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'home:index' %}">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <nav class="navbar navbar-expand-lg navbar-dark custom-nav-border custom-nav-bg">
+
+        <a class="navbar-brand" href="{% url 'home:index' %}">Dashing Data</a>
+        
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'home:index' %}">Home <span class="sr-only">(current)</span></a>
-                </li>
+                <!-- Create Chart -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home:create_chart' %}">Create Chart</a>
+                    <a class="nav-link" href="{% url 'home:create_chart' %}"><i class="fa fa-bar-chart" aria-hidden="true"></i> Create Chart</a>
                 </li>
                 {% if user.is_authenticated %}
+                <!-- Your Charts -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'search:all_charts' %}">Your Charts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:password_reset' %}">Reset Password</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
-                </li>
-                {% endif %}
+                    <a class="nav-link" href="{% url 'search:all_charts' %}"><i class="fa fa-list" aria-hidden="true"></i> Your Charts</a>
+                </li>                
+                <!-- Account Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                        Dropdown
+                        Account
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-menu custom-dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item custom-dropdown-item" href="{% url 'accounts:profile' %}"><i class="fa fa-user fa-fw" aria-hidden="true"></i> View Profile</a>
+                        <a class="dropdown-item custom-dropdown-item" href="{% url 'accounts:password_reset' %}"><i class="fa fa-key fa-fw" aria-hidden="true"></i> Reset Password</a>
                     </div>
                 </li>
+                <!-- Log Out -->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="{% url 'accounts:logout' %}"><i class="fa fa-sign-out" aria-hidden="true"></i> Log Out</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:register' %}"><i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:login' %}"><i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
+                </li>
+                {% endif %}
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 
