--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block page_title %}{% endblock page_title %}</title>
 
+    <!--shortcut icon - generated using https://realfavicongenerator.net -->
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}"> 
+
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
