--- a/home/templates/home/createchart.html
+++ b/home/templates/home/createchart.html
@@ -3,23 +3,36 @@
 {% block page_title %}Create Chart{% endblock page_title %}
 
 {% block content %}
-<div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top" alt="">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        <a href="{% url 'barchart:upload_chart' %}" class="btn btn-primary">Bar Chart</a>
+<div class="row mt-4">
+    <div class="col text-center">
+        <h1>Select a Chart Type</h1>
     </div>
 </div>
-
-<div class="card" style="width: 18rem;">
-    <img src="" class="card-img-top" alt="">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        <a href="{% url 'linechart:upload_chart' %}" class="btn btn-primary">Line Chart</a>
+<div class="row mt-4">
+    
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+        <div class="card h-100 text-center">
+            <div class="card-body">
+                <h5 class="card-title">Bar Chart <span class="badge badge-success">Free</span></h5>
+                <p class="card-text">Compare values across discrete categories.</p>            
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'barchart:upload_chart' %}" class="custom-btn">Select</a>
+            </div>
+        </div>
     </div>
+
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+        <div class="card h-100 text-center">
+            <div class="card-body">
+                <h5 class="card-title">Line Chart <span class="badge badge-warning">Paid</span></h5>
+                <p class="card-text">Shows trends over time.</p>         
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'linechart:upload_chart' %}" class="custom-btn">Select</a>
+            </div>
+        </div>
+    </div>
+
 </div>
 {% endblock %}
