--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark custom-nav-border custom-nav-bg">
+    <nav class="navbar navbar-expand-md navbar-dark custom-nav-border custom-nav-bg">
 
         <a class="navbar-brand" href="{% url 'home:index' %}">Dashing Data</a>
         
